--- a/ExpenseReport.xaml
+++ b/ExpenseReport.xaml
@@ -5,19 +5,76 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ExpenseIt"
         mc:Ignorable="d"
-        Title="ExpenseIt" Height="450" Width="800">
+        Title="Expenselt-ViewExpense"
+        Height="450"
+        Width="800">
     <Grid>
+        <Grid.Background>
+            <ImageBrush ImageSource="watermark.png" />
+        </Grid.Background>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        
-        <Grid>
-            <Grid Grid.Column="1">
-                <Grid Grid.Row="3">
-                    <!-- Примерни данни за разходи -->
-                </Grid>
-            </Grid>
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="90" />
+                <RowDefinition Height="70" />
+                <RowDefinition Height="70" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+
+            <Label x:Name="LabelOneRow"
+                   Grid.Row="0"
+                   Padding="0,20,0,0"
+                   FontSize="36"
+                   FontFamily="Segoe UI Black"
+                   Foreground="#FF2E1DDA">Expense report For:
+            </Label>
+            <Label x:Name="LabelRowTwo"
+                   Grid.Row="1"
+                   Padding="0,20,0,0"
+                   FontFamily="Segoe UI Black"
+                   Foreground="#FF0F0E0F"
+                   FontSize="20">Name:
+            </Label>
+            <Label Grid.Row="1"
+                   Padding="100,20,0,0"
+                   FontFamily="Segoe UI Black"
+                   Foreground="#FF0F0E0F"
+                   FontSize="20"
+                   Content="{Binding XPath=@Name}">
+            </Label>
+            <Label x:Name="LabelRowThree"
+                   Grid.Row="2"
+                   Padding="0,10,0,0"
+                   FontFamily="Segoe UI Black"
+                   Foreground="#FF0F0E0F"
+                   FontSize="20">Department:
+            </Label>
+            <Label Grid.Row="2"
+                   Padding="140,10,0,0"
+                   FontFamily="Segoe UI Black"
+                   Foreground="#FF0F0E0F"
+                   FontSize="20"
+                   Content="{Binding XPath=@Department}">
+            </Label>
+            <DataGrid Grid.Row="3"
+                      Background="White"
+                      ItemsSource="{Binding XPath=Expense}"
+                      AutoGenerateColumns="False"
+                      RowHeaderWidth="0"
+                      Margin="0,0,50,75">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="ExpenseType"
+                                        Width="*"
+                                        Binding="{Binding XPath=@ExpenseType}" />
+                    <DataGridTextColumn Header="Amount"
+                                        Width="*"
+                                        Binding="{Binding XPath=@ExpenseAmount}" />
+                </DataGrid.Columns>
+            </DataGrid>
+
         </Grid>
     </Grid>
 </Window>
